--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>WElcome to my website</h1>
+        <h2>This is heading 2</h2>
         Hello world!
     </body>
 </html>
